# synthia

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  agents.md  alembic.ini  com.dansiwiec.chrome-cdp.plist  com.dansiwiec.playwright-mcp.plist  com.dansiwiec.synthia.plist  docker-compose.yml  main.py  otel-collector-config.yaml  output.py  pyproject.toml  test_e2e.py  test_events.py  test_output.py  update_economist_cover.py
.claude/skills/update-dependencies/: SKILL.md
agents/: claude.py  task.py
agents/helpers/: events.py  message_printer.py  render.py
daimos/: __init__.py  main.py
daimos/agents/: __init__.py  agents.py  claude.py  models.py  subagents.py  task.py
daimos/agents/catalog/: airesearch.md  magazines.md  whatsupai.md
daimos/agents/helpers/: message_printer.py
daimos/agents/learning/: learner.py  magazines.md
daimos/events/: __init__.py
daimos/helpers/: debug.py  pubsub.py
daimos/service/: models.py  task.py  telegram.py
daimos/telegram/: __init__.py  helpers.py  telegram.py
evals/: test_summarizer.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/assistant-ui/: attachment.tsx  persona-badges.tsx  persona-selector.tsx  project-document.tsx  project-list.tsx  project-status-badge.tsx  thread-list.tsx  thread.tsx
frontend/src/lib/: api.ts  personas.ts  push.ts  sse.ts
frontend/src/runtime/: SynthiaProvider.tsx  attachmentAdapter.test.ts  attachmentAdapter.ts  personaContext.ts
frontend/src/runtime/__fixtures__/: iphone.heic
images/notion-mcp/: Dockerfile
images/ollama/: Dockerfile  entrypoint.sh
images/pgvector/: Dockerfile  init-db.sh
images/todoist-mcp/: Dockerfile
misc/: synthia-dashboard.json
misc/services/: chrome-cdp.sh
scripts/: init-plugins.sh
skills/agent-browser/: SKILL.md
skills/agent-browser/references/: agent-browser-connect.sh
skills/architecture-analyzer/: SKILL.md
skills/monitor/: SKILL.md
skills/pdfreport/: SKILL.md  publish.py
skills/product-marketer/: SKILL.md
skills/publish-image/: README.md  skill.md  upload.sh
skills/publish-report/: SKILL.md
skills/skill-optimizer/: SKILL.md
skills/synthia-learn/: SKILL.md
skills/synthia-skill/: SKILL.md
synthia/: __init__.py  main.py  metrics.py  output.py  telegram.py  telemetry.py
synthia/agents/: agent.py  agents.py  builtins.py  claude.py  mcp.py  personas.py  pool.py  progress.py  render_mermaid.mjs  skills.py  titler.py  tools.py
synthia/agents/admin/: client.py
synthia/agents/admin/tools/: notify.py
synthia/agents/catalog/: arr.md  brief.md  joke.md  magazines.md
synthia/agents/episodic/: client.py  db.py  sync.py
synthia/agents/episodic/tools/: search.py  show.py
synthia/agents/helpers/: __init__.py
synthia/agents/image/: client.py
synthia/agents/image/tools/: generate_image.py
synthia/agents/learning/: learner.py
synthia/agents/memory/: client.py
synthia/agents/memory/tools/: add_memory.py  delete_memory.py  search_memories.py
synthia/agents/projects/: client.py  context.py
synthia/agents/projects/tools/: _serialize.py  create_project.py  delete_project.py  list_projects.py  select_project.py  update_project.py
synthia/agents/scheduler/: client.py  service.py
synthia/agents/scheduler/tools/: add_job.py  add_one_shot_job.py  delete_all_jobs.py  delete_job.py  list_jobs.py  trigger_job.py
synthia/agents/sessions/: client.py
synthia/agents/sessions/tools/: get_session.py  list_sessions.py
synthia/agents/skilltools/: client.py  versions.py
synthia/discord/: __init__.py  client.py
synthia/helpers/: debug.py  pubsub.py  schema.py
synthia/migrations/: env.py  runner.py
synthia/migrations/versions/: 001_initial.py  002_drop_old_plugin_tables.py  003_chat.py  004_push_subscriptions.py  005_migrate_mem0_embeddings.py  006_job_executions.py  007_tasks.py  008_projects.py  009_projects_schema.py  010_project_next_step.py
synthia/routes/: __init__.py  audio.py  chat.py  push.py  task.py  voice.py
synthia/service/: chat.py  episodic_memory_sync.py  job_execution_repository.py  models.py  project_repository.py  push.py  session_repository.py  task.py  task_repository.py
synthia/static/: chat.html  index.html  manifest.json  sw.js
synthia/telegram/: __init__.py  helpers.py  telegram.py
tests/: AGENTS.md  conftest.py  helpers.py  test_attachments.py  test_claude.py  test_claude_pool.py  test_discord.py  test_e2e.py  test_eval_front_agent.py  test_eval_memory.py  test_eval_vision.py  test_events.py  test_front_agent.py  test_job_executions.py  test_metrics.py  test_output.py  test_perf_mcp_tools.py  test_perf_memory.py  test_performance.py  test_personas.py  test_progress.py  test_projects.py  test_scheduler.py  test_sessions.py  test_skill_reload.py  test_skill_versions.py  test_thought_boundaries.py  test_ui.py  test_voice.py
tests/.claude/skills/kilo-to-pebble-converter/: SKILL.md
