[project]
name = "synthia"
version = "0.1.0"
description = "FastAPI application with Claude Agent SDK integration"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.1.0",
    "python-dotenv>=1.2.1",
    "jsonschema>=4.25.1",
    "langchain-openai>=1.1.0",
    "pydantic>=2.12.4",
    "fastapi[standard]>=0.122.0",
    "loguru>=0.7.3",
    "markdown>=3.10",
    "bleach>=6.3.0",
    "claude-agent-sdk>=0.1.10",
    "mem0ai>=1.0.1",
    "psycopg[binary]>=3.2.13",
    "psycopg-pool>=3.2.8",
    "pydantic-settings>=2.12.0",
    "apscheduler>=3.11.1",
    "beautifulsoup4>=4.14.2",
    "discord-py>=2.6.4",
    "table2ascii>=1.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synthia"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["synthia"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "smoke: marks tests as smoke tests (quick tests for basic functionality)"
]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest-repeat>=0.9.4",
    "pytest>=8.4.2,<9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-testmon>=2.1.4",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.6",
    "ty>=0.0.1a28",
    "testcontainers>=4.13.3",
]
