[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pre-commit>=4.6.0",
  "pytest-repeat>=0.9.4",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-testmon>=2.2.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.12",
  "ty>=0.0.34",
  "testcontainers>=4.14.2",
  "toml-sort>=0.24.4"
]

[project]
name = "synthia"
version = "0.1.0"
description = "FastAPI application with Claude Agent SDK integration"
requires-python = ">=3.13"
dependencies = [
  "python-dotenv>=1.2.2",
  "fastapi[standard]>=0.136.1",
  "loguru>=0.7.3",
  "mem0ai>=2.0.2",
  "psycopg[binary]>=3.3.4",
  "psycopg-pool>=3.3.1",
  "pydantic-settings>=2.13.1",
  "apscheduler>=3.11.2",
  "prometheus-fastapi-instrumentator>=7.1.0",
  "psutil>=7.2.2",
  "opentelemetry-api>=1.41.1",
  "opentelemetry-sdk>=1.41.1",
  "opentelemetry-exporter-otlp>=1.41.1",
  "opentelemetry-instrumentation-fastapi>=0.62b1",
  "opentelemetry-instrumentation-logging>=0.62b1",
  "asyncpg>=0.31.0",
  "sentence-transformers>=5.4.1",
  "alembic>=1.18.4",
  "sqlalchemy>=2.0.48",
  "pydantic>=2.12.5",
  "langsmith[claude-agent-sdk]>=0.8.3",
  "pywebpush>=2.3.0",
  "ollama>=0.6.2",
  "claude-agent-sdk>=0.1.48"
]

[tool.hatch.build.targets.wheel]
packages = ["synthia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "smoke: marks tests as smoke tests (quick tests for basic functionality)",
  "performance: marks performance benchmarks (excluded from make test)",
  "eval: marks evaluation tests for LLM capabilities"
]
filterwarnings = [
  "ignore::DeprecationWarning:testcontainers.*"
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP" # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["synthia"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"synthia/main.py" = ["E402"]
